--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="page-header">
+    <header class="page-header section">
       <div class="container">
         <nav class="nav-page">
           <a class="link-logo link" href="./index.html"
@@ -55,14 +55,14 @@
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="title-page">Effective Solutions for Your Business</h1>
           <button class="button-order" type="button">Order Service</button>
         </div>
       </section>
       <!-- Skills -->
-      <section class="skills">
+      <section class="skills section">
         <div class="container">
           <h2 class="hidden" hidden>Skills</h2>
           <ul class="menu-skills list">
@@ -98,7 +98,7 @@
         </div>
       </section>
       <!-- Our Work -->
-      <section class="our-work">
+      <section class="our-work section">
         <div class="container">
           <h2 class="title-section">What are we doing</h2>
           <ul class="menu-our-work list">
@@ -130,7 +130,7 @@
         </div>
       </section>
       <!-- Our Team -->
-      <section class="our-team">
+      <section class="our-team section">
         <div class="container">
           <h2 class="title-section">Our Team</h2>
           <ul class="menu-our-team list">
@@ -187,7 +187,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-page">
+    <footer class="footer-page section">
       <div class="container">
         <a class="link-logo link" href="./index.html"
           >Web<span class="logo-chank">Studio</span></a
