--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <h2 class="hidden" hidden>Skills</h2>
           <ul class="menu-skills list">
             <li class="menu-item">
+              <div class="icon-container-skills">
+                <svg class="icon-svg-skills">
+                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title-description">Strategy</h3>
               <p class="description">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="icon-container-skills">
+                <svg class="icon-svg-skills">
+                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title-description">Punctuality</h3>
               <p class="description">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="icon-container-skills">
+                <svg class="icon-svg-skills">
+                  <use href="./images/svg/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title-description">Diligence</h3>
               <p class="description">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="icon-container-skills">
+                <svg class="icon-svg-skills">
+                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title-description">Technologies</h3>
               <p class="description">
                 Design practice focused on digital experiences. We bring forth a
