--- a/index.html
+++ b/index.html
@@ -164,6 +164,36 @@
               <div class="container-description">
                 <h3 class="title-description">Mark Guerrero</h3>
                 <p class="description">Product Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item">
@@ -176,6 +206,36 @@
               <div class="container-description">
                 <h3 class="title-description">Tom Ford</h3>
                 <p class="description">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item">
@@ -188,6 +248,36 @@
               <div class="container-description">
                 <h3 class="title-description">Camila Garcia</h3>
                 <p class="description">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item">
@@ -200,6 +290,36 @@
               <div class="container-description">
                 <h3 class="title-description">Daniel Wilson</h3>
                 <p class="description">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-items">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
