--- a/index.html
+++ b/index.html
@@ -325,10 +325,48 @@
           </ul>
         </div>
       </section>
+      <!-- Customers -->
+      <section class="customers section">
+        <div class="container-customers">
+          <h2 class="title-section">Customers</h2>
+          <ul class="list-cust-svg">
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-1"></use>
+              </svg>
+            </li>
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-2"></use>
+              </svg>
+            </li>
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-3"></use>
+              </svg>
+            </li>
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-4"></use>
+              </svg>
+            </li>
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-5"></use>
+              </svg>
+            </li>
+            <li class="list-item-cust">
+              <svg class="logo-cust">
+                <use href="./images/svg/icons.svg#icon-logo-6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="footer-page section">
-      <div class="container">
+      <div class="container-footer">
         <a class="link-logo link" href="./index.html"
           >Web<span class="logo-chank">Studio</span></a
         >
@@ -336,6 +374,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container-foot-svg">
+        <p class="desc-foot-svg">Social media</p>
+        <ul class="social-list list">
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
