--- a/portfolio.html
+++ b/portfolio.html
@@ -211,8 +211,8 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-page">
-      <div class="container">
+    <footer class="footer-page section">
+      <div class="container-footer">
         <a class="link-logo link" href="./index.html"
           >Web<span class="logo-chank">Studio</span></a
         >
@@ -220,6 +220,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container-foot-svg">
+        <p class="desc-foot-svg">Social media</p>
+        <ul class="social-list list">
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-items">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon">
+                <use href="./images/svg/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
