--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="menu-skills list">
             <li class="menu-item">
               <div class="icon-container-skills">
-                <svg class="icon-svg-skills">
+                <svg class="icon-svg-skills" width="64" height="64">
                   <use href="./images/svg/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -80,7 +80,7 @@
             </li>
             <li class="menu-item">
               <div class="icon-container-skills">
-                <svg class="icon-svg-skills">
+                <svg class="icon-svg-skills" width="64" height="64">
                   <use href="./images/svg/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="menu-item">
               <div class="icon-container-skills">
-                <svg class="icon-svg-skills">
+                <svg class="icon-svg-skills" width="64" height="64">
                   <use href="./images/svg/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="menu-item">
               <div class="icon-container-skills">
-                <svg class="icon-svg-skills">
+                <svg class="icon-svg-skills" width="64" height="64">
                   <use href="./images/svg/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
