--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
       <!-- Our Team -->
       <section class="our-team section">
-        <div class="container">
+        <div class="container-our-team">
           <h2 class="title-section">Our Team</h2>
           <ul class="menu-our-team list">
             <li class="menu-item">
@@ -167,28 +167,28 @@
                 <ul class="social-list list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
