--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="page-header">
-      <div class="container">
+    <header class="page-header section">
+      <div class="container-header">
         <nav class="nav-page">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-chank">Studio</span></a
@@ -55,8 +55,8 @@
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero-portfolio">
-        <div class="container">
+      <section class="hero-portfolio section">
+        <div class="container-portfolio">
           <h1 class="title-portfolio" hidden>Portfolio Skills</h1>
           <ul class="menu-button list">
             <li class="menu-item">
