--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Header -->
     <header class="page-header section">
-      <div class="container">
+      <div class="container-header">
         <nav class="nav-page">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-chank">Studio</span></a
@@ -56,14 +56,14 @@
     <main>
       <!-- Hero -->
       <section class="hero section">
-        <div class="container">
+        <div class="container-hero">
           <h1 class="title-page">Effective Solutions for Your Business</h1>
           <button class="button-order" type="button">Order Service</button>
         </div>
       </section>
       <!-- Skills -->
       <section class="skills section">
-        <div class="container">
+        <div class="container-skills">
           <h2 class="hidden" hidden>Skills</h2>
           <ul class="menu-skills list">
             <li class="menu-item">
@@ -119,7 +119,7 @@
       </section>
       <!-- Our Work -->
       <section class="our-work section">
-        <div class="container">
+        <div class="container-our-work">
           <h2 class="title-section">What are we doing</h2>
           <ul class="menu-our-work list">
             <li class="menu-item">
