--- a/index.html
+++ b/index.html
@@ -209,28 +209,28 @@
                 <ul class="social-list list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -251,28 +251,28 @@
                 <ul class="social-list list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -293,28 +293,28 @@
                 <ul class="social-list list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -325,40 +325,53 @@
           </ul>
         </div>
       </section>
+
       <!-- Customers -->
       <section class="customers section">
         <div class="container-customers">
           <h2 class="title-section">Customers</h2>
-          <ul class="list-cust-svg">
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-1"></use>
-              </svg>
+          <ul class="menu-cust-svg">
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-2"></use>
-              </svg>
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-3"></use>
-              </svg>
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-4"></use>
-              </svg>
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-5"></use>
-              </svg>
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item-cust">
-              <svg class="logo-cust">
-                <use href="./images/svg/icons.svg#icon-logo-6"></use>
-              </svg>
+            <li class="list-item-cust list">
+              <a href="" class="link-logo-cust link" width="56" height="16">
+                <svg class="logo-cust-svg">
+                  <use href="./images/svg/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
