--- a/index.html
+++ b/index.html
@@ -332,43 +332,43 @@
           <h2 class="title-section">Customers</h2>
           <ul class="menu-cust-svg">
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
-              <a href="" class="link-logo-cust link" width="56" height="16">
-                <svg class="logo-cust-svg">
+              <a href="" class="link-logo-cust link">
+                <svg class="logo-cust-svg" width="104" height="56">
                   <use href="./images/svg/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
