--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="container-description">
                 <h3 class="title-description">Mark Guerrero</h3>
                 <p class="description">Product Designer</p>
-                <ul class="social-list list">
+                <ul class="menu-social list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
@@ -206,7 +206,7 @@
               <div class="container-description">
                 <h3 class="title-description">Tom Ford</h3>
                 <p class="description">Frontend Developer</p>
-                <ul class="social-list list">
+                <ul class="menu-social list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
@@ -248,7 +248,7 @@
               <div class="container-description">
                 <h3 class="title-description">Camila Garcia</h3>
                 <p class="description">Marketing</p>
-                <ul class="social-list list">
+                <ul class="menu-social list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
@@ -290,31 +290,31 @@
               <div class="container-description">
                 <h3 class="title-description">Daniel Wilson</h3>
                 <p class="description">UI Designer</p>
-                <ul class="social-list list">
+                <ul class="menu-social list">
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
+                      <svg class="social-list-icon" width="24" height="24">
                         <use href="./images/svg/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
+                      <svg class="social-list-icon" width="24" height="24">
                         <use href="./images/svg/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
+                      <svg class="social-list-icon" width="24" height="24">
                         <use href="./images/svg/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
+                      <svg class="social-list-icon" width="24" height="24">
                         <use href="./images/svg/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -391,31 +391,31 @@
         </div>
         <div class="container-foot-svg">
           <p class="desc-foot-svg">Social media</p>
-          <ul class="social-list list">
+          <ul class="menu-social list">
             <li class="social-list-items">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/svg/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
