--- a/portfolio.html
+++ b/portfolio.html
@@ -213,46 +213,48 @@
     <!-- Footer -->
     <footer class="footer-page section">
       <div class="container-footer">
-        <a class="link-logo link" href="./index.html"
-          >Web<span class="logo-chank">Studio</span></a
-        >
-        <p class="description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container-foot-svg">
-        <p class="desc-foot-svg">Social media</p>
-        <ul class="social-list list">
-          <li class="social-list-items">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/svg/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-items">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/svg/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-items">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/svg/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-items">
-            <a href="" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/svg/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="container-foot-logo">
+          <a class="link-logo link" href="./index.html"
+            >Web<span class="logo-chank">Studio</span></a
+          >
+          <p class="description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-foot-svg">
+          <p class="desc-foot-svg">Social media</p>
+          <ul class="menu-social list">
+            <li class="social-list-items">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/svg/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-items">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/svg/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-items">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/svg/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-items">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
