--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
         </div>
         <div class="container-foot-svg">
           <p class="desc-foot-svg">Social media</p>
-          <ul class="menu-social list">
+          <ul class="menu-social-svg list">
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
