--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
       <!-- Customers -->
       <section class="customers section">
-        <div class="container-customers">
+        <div class="container">
           <h2 class="title-section">Customers</h2>
           <ul class="menu-cust-svg">
             <li class="list-item-cust list">
