--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="menu-item">
               <div class="icon-container-skills">
                 <svg class="icon-svg-skills" width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title-description">Strategy</h3>
@@ -81,7 +81,7 @@
             <li class="menu-item">
               <div class="icon-container-skills">
                 <svg class="icon-svg-skills" width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="title-description">Punctuality</h3>
@@ -93,7 +93,7 @@
             <li class="menu-item">
               <div class="icon-container-skills">
                 <svg class="icon-svg-skills" width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="title-description">Diligence</h3>
@@ -105,7 +105,7 @@
             <li class="menu-item">
               <div class="icon-container-skills">
                 <svg class="icon-svg-skills" width="64" height="64">
-                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="title-description">Technologies</h3>
@@ -168,28 +168,28 @@
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,28 +210,28 @@
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -252,28 +252,28 @@
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -294,28 +294,28 @@
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="24" height="24">
-                        <use href="./images/svg/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="24" height="24">
-                        <use href="./images/svg/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="24" height="24">
-                        <use href="./images/svg/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="24" height="24">
-                        <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -334,42 +334,42 @@
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-1"></use>
+                  <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-2"></use>
+                  <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-3"></use>
+                  <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-4"></use>
+                  <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-5"></use>
+                  <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="list-item-cust list">
               <a href="" class="link-logo-cust link">
                 <svg class="logo-cust-svg" width="104" height="56">
-                  <use href="./images/svg/icons.svg#icon-logo-6"></use>
+                  <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -395,28 +395,28 @@
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
