--- a/portfolio.html
+++ b/portfolio.html
@@ -228,28 +228,28 @@
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
               <a href="" class="social-list-link">
                 <svg class="social-list-icon" width="24" height="24">
-                  <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
